# FBI-agent

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  build.sh  debug_build.sh  ffmpeg_commands  proto
deploy/: drain-deploy.sh  drain-status.sh  force-stop-drain.sh
migrations/: 20260514000001_create_bot_deploy_leases.down.sql  20260514000001_create_bot_deploy_leases.up.sql  20260515000001_add_audio_file_recording_heartbeat.down.sql  20260515000001_add_audio_file_recording_heartbeat.up.sql
src/: config.rs  cooldown.rs  deployment.rs  event_handler.rs  grpc.rs  http.rs  main.rs  metrics.rs  reaper.rs  runtime.rs  telemetry.rs
src/commands/: clip_it.rs  jam.rs  mod.rs  play_clip_command.rs  stamp.rs  voice_controls.rs
src/database/: channels.rs  mod.rs  user_names.rs
src/events/: emojis.rs  guilds.rs  integrations.rs  interactions.rs  invites.rs  messages.rs  mod.rs  ogg_opus_writer.rs  reactions.rs  roles.rs  voice.rs  voice_receiver.rs
src/grpc/: admin.rs  dashboard.rs  jammer.rs  mod.rs  snapshot.rs
src/tests/: audio_paths.rs  mod.rs
