[package]
name = "fbi_agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "builder",
	"voice",
    "client",
    "gateway",
	"cache",
    "http",
    "model",
    "utils",
    "rustls_backend",
	"unstable_discord_api"
]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
songbird = "0.3.0"
# sqlx = { version = "0.5", features = [ "mysql", "runtime-tokio-native-tls", "offline" ] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
reqwest = "0.11"
regex = "1.7.0"
wav = "1.0.0"
byteorder = "1.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[profile.release]
# debug = true
[profile.bench]
# debug = true