[package]
name = "fbi_agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
	"builder",
	"voice",
	"client",
	"gateway",
	"cache",
	"http",
	"model",
	"utils",
	"rustls_backend",
	"unstable_discord_api",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "tracing"] }
songbird = { version = "0.4", features = [
	"driver",
	"builtin-queue",
	"receive",
	"simd-json",
] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
# actix-web = "4"
# axum="0.6"
serde = "1"
serde_repr = "0.1"
tonic = "0.8"
prost = "0.11"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
console-subscriber = "0.2.0"


[build-dependencies]
tonic-build = "0.8"

[profile.release]
# debug = true
[profile.bench]
# debug = true
